--- a/research_modeling_basty.ipynb
+++ b/research_modeling_basty.ipynb
@@ -109,6 +109,31 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Index(['Fase', 'Banco', 'Tipo de tronadura', 'Tipo Material', 'M',\n",
+       "       'Dominio Estructural', 'Diámetro', 'BxS', 'Tiempo entre Pozos Filas ms',\n",
+       "       'Fc', 'Tipo Explosivo', 'P10', 'P20', 'P30', 'P40', 'P50', 'P60', 'P70',\n",
+       "       'P80', 'P90', 'P100', 'Este', 'Norte', 'Cota', 'B', 'S', 'tiempo_1',\n",
+       "       'tiempo_2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -302,7 +327,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,24 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CATEGORICAL_COLS = ['Fase', 'Tipo de tronadura', 'Tipo Material', 'M', 'Dominio Estructural']\n",
-    "NUMERICAL_COLS = ['Banco', 'Diámetro', 'Fc', 'Cota', 'B', 'S', 'tiempo_1', 'tiempo_2']\n",
-    "TARGET_COLS = ['P10', 'P20', 'P30', 'P40', 'P50', 'P60', 'P70', 'P80', 'P90', 'P100']\n",
-    "TEST_SIZE = 0.33"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = df[TARGET_COLS]\n",
-    "X = df[CATEGORICAL_COLS + NUMERICAL_COLS]"
+    "CATEGORICAL_COLS = ['Fase', 'Tipo de tronadura', 'Tipo Material', 'M', 'Dominio Estructural', 'Tipo Explosivo']\n",
+    "NUMERICAL_COLS = ['Banco', 'Diámetro', 'Fc', 'Cota', 'B', 'S', 'tiempo_1', 'tiempo_2']\n",
+    "TARGET_COLS = ['P10', 'P20', 'P30', 'P40', 'P50', 'P60', 'P70', 'P80', 'P90', 'P100']\n",
+    "TEST_SIZE = 0.33"
    ]
   },
   {
@@ -339,6 +354,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#y = df[TARGET_COLS]\n",
+    "#X = df[CATEGORICAL_COLS + NUMERICAL_COLS]\n",
     "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=TEST_SIZE, random_state=42)"
    ]
   },
@@ -368,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,309 +397,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Fase</th>\n",
-       "      <th>Tipo de tronadura</th>\n",
-       "      <th>Tipo Material</th>\n",
-       "      <th>M</th>\n",
-       "      <th>Dominio Estructural</th>\n",
-       "      <th>Banco</th>\n",
-       "      <th>Diámetro</th>\n",
-       "      <th>Fc</th>\n",
-       "      <th>Cota</th>\n",
-       "      <th>B</th>\n",
-       "      <th>S</th>\n",
-       "      <th>tiempo_1</th>\n",
-       "      <th>tiempo_2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.771911</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>5.800176</td>\n",
-       "      <td>5.803466</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>2825.0</td>\n",
-       "      <td>12.250</td>\n",
-       "      <td>495.0</td>\n",
-       "      <td>2825.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>72.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.104362</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>3440.0</td>\n",
-       "      <td>12.250</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>3440.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>61.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.645672</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.893772</td>\n",
-       "      <td>4.080759</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>3845.0</td>\n",
-       "      <td>9.875</td>\n",
-       "      <td>244.0</td>\n",
-       "      <td>3845.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>85.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.771911</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>5.800176</td>\n",
-       "      <td>5.803466</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>2840.0</td>\n",
-       "      <td>12.250</td>\n",
-       "      <td>523.0</td>\n",
-       "      <td>2840.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>36.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.080759</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>3530.0</td>\n",
-       "      <td>10.625</td>\n",
-       "      <td>217.0</td>\n",
-       "      <td>3530.0</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>120.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Fase  Tipo de tronadura  Tipo Material         M  Dominio Estructural  \\\n",
-       "0  5.771911           4.930173       5.800176  5.803466             4.677983   \n",
-       "1  4.034303           4.930173       4.069519  4.104362             4.677983   \n",
-       "2  4.645672           4.930173       4.893772  4.080759             4.677983   \n",
-       "3  5.771911           4.930173       5.800176  5.803466             4.677983   \n",
-       "4  4.034303           4.930173       4.069519  4.080759             4.677983   \n",
-       "\n",
-       "    Banco  Diámetro     Fc    Cota     B     S  tiempo_1  tiempo_2  \n",
-       "0  2825.0    12.250  495.0  2825.0   7.0   7.0       5.0      72.0  \n",
-       "1  3440.0    12.250  140.0  3440.0  13.0  14.0       7.0      61.0  \n",
-       "2  3845.0     9.875  244.0  3845.0   7.0   8.0       7.0      85.0  \n",
-       "3  2840.0    12.250  523.0  2840.0   7.0   7.0       5.0      36.0  \n",
-       "4  3530.0    10.625  217.0  3530.0   8.5  10.0      17.0     120.0  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Fase</th>\n",
-       "      <th>Tipo de tronadura</th>\n",
-       "      <th>Tipo Material</th>\n",
-       "      <th>M</th>\n",
-       "      <th>Dominio Estructural</th>\n",
-       "      <th>Banco</th>\n",
-       "      <th>Diámetro</th>\n",
-       "      <th>Fc</th>\n",
-       "      <th>Cota</th>\n",
-       "      <th>B</th>\n",
-       "      <th>S</th>\n",
-       "      <th>tiempo_1</th>\n",
-       "      <th>tiempo_2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.771911</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>5.800176</td>\n",
-       "      <td>5.803466</td>\n",
-       "      <td>5.688099</td>\n",
-       "      <td>2855.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>523.0</td>\n",
-       "      <td>2855.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.080759</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>3425.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>149.0</td>\n",
-       "      <td>3425.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>84.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.104362</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>3515.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>230.0</td>\n",
-       "      <td>3515.0</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.771911</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>5.800176</td>\n",
-       "      <td>5.803466</td>\n",
-       "      <td>5.688099</td>\n",
-       "      <td>2885.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>523.0</td>\n",
-       "      <td>2885.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>25.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.104362</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>3425.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>149.0</td>\n",
-       "      <td>3425.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>84.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Fase  Tipo de tronadura  Tipo Material         M  Dominio Estructural  \\\n",
-       "0  5.771911           4.930173       5.800176  5.803466             5.688099   \n",
-       "1  4.034303           4.930173       4.069519  4.080759             4.677983   \n",
-       "2  4.034303           4.930173       4.069519  4.104362             4.677983   \n",
-       "3  5.771911           4.930173       5.800176  5.803466             5.688099   \n",
-       "4  4.034303           4.930173       4.069519  4.104362             4.677983   \n",
-       "\n",
-       "    Banco  Diámetro     Fc    Cota     B     S  tiempo_1  tiempo_2  \n",
-       "0  2855.0     12.25  523.0  2855.0   7.0   7.0       4.0      30.0  \n",
-       "1  3425.0     12.25  149.0  3425.0  13.0  14.0       7.0      84.0  \n",
-       "2  3515.0     12.25  230.0  3515.0  10.5  10.5       9.0      94.0  \n",
-       "3  2885.0     12.25  523.0  2885.0   7.0   7.0       2.0      25.0  \n",
-       "4  3425.0     12.25  149.0  3425.0  13.0  14.0       7.0      84.0  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,49 +449,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Decision Tree\n",
-      "Numero optimo de features para P10: 2, MAPE: 66.61, RMSE: 0.08\n",
-      "Numero optimo de features para P20: 6, MAPE: 50.24, RMSE: 0.2\n",
-      "Numero optimo de features para P30: 7, MAPE: 42.96, RMSE: 0.34\n",
-      "Numero optimo de features para P40: 4, MAPE: 35.82, RMSE: 0.45\n",
-      "Numero optimo de features para P50: 4, MAPE: 25.8, RMSE: 0.48\n",
-      "Numero optimo de features para P60: 3, MAPE: 15.54, RMSE: 0.37\n",
-      "Numero optimo de features para P70: 2, MAPE: 9.6, RMSE: 0.26\n",
-      "Numero optimo de features para P80: 11, MAPE: 5.75, RMSE: 0.19\n",
-      "Numero optimo de features para P90: 3, MAPE: 9.62, RMSE: 0.8\n",
-      "Numero optimo de features para P100: 6, MAPE: 19.37, RMSE: 7.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Decision Tree')\n",
-    "evalute_classifier(DecisionTreeRegressor())"
+    "evalute_classifier(DecisionTreeRegressor(random_state=43))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest\n",
-      "Numero optimo de features para P10: 12, MAPE: 66.8, RMSE: 0.07\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Random Forest')\n",
-    "evalute_classifier(RandomForestRegressor(n_estimators=20))"
+    "N_ESTIMATORS = [2, 5, 10, 15, 20, 30, 50]\n",
+    "for n_estimator in N_ESTIMATORS:\n",
+    "    print('Random Forest - {} Estimadores'.format(n_estimator))\n",
+    "    evalute_classifier(RandomForestRegressor(n_estimators=n_estimator, random_state=43))\n",
+    "    print('_________________________________________________________________________-')"
    ]
   },
   {
