--- a/research_modeling_basty.ipynb
+++ b/research_modeling_basty.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,326 +376,26 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Fase</th>\n",
-       "      <th>Tipo de tronadura</th>\n",
-       "      <th>Tipo Material</th>\n",
-       "      <th>M</th>\n",
-       "      <th>Dominio Estructural</th>\n",
-       "      <th>Tipo Explosivo</th>\n",
-       "      <th>Banco</th>\n",
-       "      <th>Diámetro</th>\n",
-       "      <th>Fc</th>\n",
-       "      <th>Cota</th>\n",
-       "      <th>B</th>\n",
-       "      <th>S</th>\n",
-       "      <th>tiempo_1</th>\n",
-       "      <th>tiempo_2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.771911</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>5.800176</td>\n",
-       "      <td>5.803466</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>4.588825</td>\n",
-       "      <td>2825.0</td>\n",
-       "      <td>12.250</td>\n",
-       "      <td>495.0</td>\n",
-       "      <td>2825.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>72.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.104362</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>4.588825</td>\n",
-       "      <td>3440.0</td>\n",
-       "      <td>12.250</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>3440.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>61.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.645672</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.893772</td>\n",
-       "      <td>4.080759</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>4.588825</td>\n",
-       "      <td>3845.0</td>\n",
-       "      <td>9.875</td>\n",
-       "      <td>244.0</td>\n",
-       "      <td>3845.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>85.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.771911</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>5.800176</td>\n",
-       "      <td>5.803466</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>4.588825</td>\n",
-       "      <td>2840.0</td>\n",
-       "      <td>12.250</td>\n",
-       "      <td>523.0</td>\n",
-       "      <td>2840.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>36.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.080759</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>4.442981</td>\n",
-       "      <td>3530.0</td>\n",
-       "      <td>10.625</td>\n",
-       "      <td>217.0</td>\n",
-       "      <td>3530.0</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>120.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Fase  Tipo de tronadura  Tipo Material         M  Dominio Estructural  \\\n",
-       "0  5.771911           4.930173       5.800176  5.803466             4.677983   \n",
-       "1  4.034303           4.930173       4.069519  4.104362             4.677983   \n",
-       "2  4.645672           4.930173       4.893772  4.080759             4.677983   \n",
-       "3  5.771911           4.930173       5.800176  5.803466             4.677983   \n",
-       "4  4.034303           4.930173       4.069519  4.080759             4.677983   \n",
-       "\n",
-       "   Tipo Explosivo   Banco  Diámetro     Fc    Cota     B     S  tiempo_1  \\\n",
-       "0        4.588825  2825.0    12.250  495.0  2825.0   7.0   7.0       5.0   \n",
-       "1        4.588825  3440.0    12.250  140.0  3440.0  13.0  14.0       7.0   \n",
-       "2        4.588825  3845.0     9.875  244.0  3845.0   7.0   8.0       7.0   \n",
-       "3        4.588825  2840.0    12.250  523.0  2840.0   7.0   7.0       5.0   \n",
-       "4        4.442981  3530.0    10.625  217.0  3530.0   8.5  10.0      17.0   \n",
-       "\n",
-       "   tiempo_2  \n",
-       "0      72.0  \n",
-       "1      61.0  \n",
-       "2      85.0  \n",
-       "3      36.0  \n",
-       "4     120.0  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "with open('models/encoder.pickle', 'wb') as handle:\n",
+    "    pickle.dump(encoder, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Fase</th>\n",
-       "      <th>Tipo de tronadura</th>\n",
-       "      <th>Tipo Material</th>\n",
-       "      <th>M</th>\n",
-       "      <th>Dominio Estructural</th>\n",
-       "      <th>Tipo Explosivo</th>\n",
-       "      <th>Banco</th>\n",
-       "      <th>Diámetro</th>\n",
-       "      <th>Fc</th>\n",
-       "      <th>Cota</th>\n",
-       "      <th>B</th>\n",
-       "      <th>S</th>\n",
-       "      <th>tiempo_1</th>\n",
-       "      <th>tiempo_2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.771911</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>5.800176</td>\n",
-       "      <td>5.803466</td>\n",
-       "      <td>5.688099</td>\n",
-       "      <td>4.588825</td>\n",
-       "      <td>2855.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>523.0</td>\n",
-       "      <td>2855.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.080759</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>4.588825</td>\n",
-       "      <td>3425.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>149.0</td>\n",
-       "      <td>3425.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>84.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.104362</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>4.284439</td>\n",
-       "      <td>3515.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>230.0</td>\n",
-       "      <td>3515.0</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.771911</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>5.800176</td>\n",
-       "      <td>5.803466</td>\n",
-       "      <td>5.688099</td>\n",
-       "      <td>5.290478</td>\n",
-       "      <td>2885.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>523.0</td>\n",
-       "      <td>2885.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>25.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.034303</td>\n",
-       "      <td>4.930173</td>\n",
-       "      <td>4.069519</td>\n",
-       "      <td>4.104362</td>\n",
-       "      <td>4.677983</td>\n",
-       "      <td>4.588825</td>\n",
-       "      <td>3425.0</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>149.0</td>\n",
-       "      <td>3425.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>84.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Fase  Tipo de tronadura  Tipo Material         M  Dominio Estructural  \\\n",
-       "0  5.771911           4.930173       5.800176  5.803466             5.688099   \n",
-       "1  4.034303           4.930173       4.069519  4.080759             4.677983   \n",
-       "2  4.034303           4.930173       4.069519  4.104362             4.677983   \n",
-       "3  5.771911           4.930173       5.800176  5.803466             5.688099   \n",
-       "4  4.034303           4.930173       4.069519  4.104362             4.677983   \n",
-       "\n",
-       "   Tipo Explosivo   Banco  Diámetro     Fc    Cota     B     S  tiempo_1  \\\n",
-       "0        4.588825  2855.0     12.25  523.0  2855.0   7.0   7.0       4.0   \n",
-       "1        4.588825  3425.0     12.25  149.0  3425.0  13.0  14.0       7.0   \n",
-       "2        4.284439  3515.0     12.25  230.0  3515.0  10.5  10.5       9.0   \n",
-       "3        5.290478  2885.0     12.25  523.0  2885.0   7.0   7.0       2.0   \n",
-       "4        4.588825  3425.0     12.25  149.0  3425.0  13.0  14.0       7.0   \n",
-       "\n",
-       "   tiempo_2  \n",
-       "0      30.0  \n",
-       "1      84.0  \n",
-       "2      94.0  \n",
-       "3      25.0  \n",
-       "4      84.0  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train.head()"
    ]
@@ -711,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,26 +540,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numero optimo de features para P10: 12, MAPE: 66.52, MSE: 0.07\n",
-      "Numero optimo de features para P20: 12, MAPE: 50.86, MSE: 0.18\n",
-      "Numero optimo de features para P30: 4, MAPE: 42.77, MSE: 0.32\n",
-      "Numero optimo de features para P40: 5, MAPE: 34.59, MSE: 0.43\n",
-      "Numero optimo de features para P50: 3, MAPE: 25.0, MSE: 0.45\n",
-      "Numero optimo de features para P60: 4, MAPE: 15.44, MSE: 0.37\n",
-      "Numero optimo de features para P70: 12, MAPE: 9.19, MSE: 0.25\n",
-      "Numero optimo de features para P80: 13, MAPE: 5.67, MSE: 0.18\n",
-      "Numero optimo de features para P90: 3, MAPE: 9.7, MSE: 0.75\n",
-      "Numero optimo de features para P100: 7, MAPE: 18.63, MSE: 6.22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "MODELO SELECCIONADO:\n",
@@ -893,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
