iteración para malla creada

--- a/grid_felipe.ipynb
+++ b/grid_felipe.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pickle"
+    "import pickle\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,91 +93,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_stage3 = pd.read_excel('data/Datos_Entregable3_Hackathon.xlsx', header=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nP70 FOR tiempo_1\\nP80 FOR EVERYTHING ELSE\\n'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "P70 FOR tiempo_1\n",
-    "P80 FOR EVERYTHING ELSE\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([10.625, 12.25 ,  7.875,  9.875, 11.625])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_historic['Diámetro'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Search Diametro, BxS, Tiempo Entre Pozos, Fc, Tipo Explosivos\n",
-    "\n",
-    "Restricciones:\n",
-    "    Fc:\n",
-    "        min: 100\n",
-    "        max: 1000\n",
-    "    \n",
-    "    tiempo_1 < tiempo_2\n",
-    "    \n",
-    "    Diametro, Fraccion, dist min, dist max\n",
+    "\"\"\"restricciones:\n",
+    "    -100 < FC < 1000\n",
+    "    -tiempo_1 < tiempo_2\n",
+    "    -Diametro, Fraccion, dist min, dist max\n",
     "    12.25 == 1/4 -> 5.5 - 15 m\n",
     "    10.625 == 10 5/8 -> 5.5 - 15 m\n",
     "    9.875 == 9 7/8 -> 5 - 15m\n",
     "    7.875 == 7 7/8 -> 4 - 15m\n",
     "    6.5 == 6 1/2 -> 4 - 15m\n",
     "    6 == 6 -> 3.6 - 15 m\n",
-    "    \n",
-    "Crear Algoritmo Genetico\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"\n",
-    "print(0)"
+    "Diámetro - BxS - Tiempo entre Pozos Filas ms - Fc - Tipo Explosivo\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FC=list(range(100,1001))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diametro=[6,6.5,7.875,9.875,10.625,12.25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B=list(np.arange(3.5,15.1,0.1))\n",
+    "B = [ round(elem, 2) for elem in B ]\n",
+    "\n",
+    "S=list(np.arange(3.5,15.1,0.1))\n",
+    "S = [ round(elem, 2) for elem in S ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiempo_1=list(range(0,201))\n",
+    "tiempo_2=list(range(0,201))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in FC:\n",
+    "    for j in diametro:\n",
+    "        for k in B:\n",
+    "            for l in S:\n",
+    "                for m in tiempo_1:\n",
+    "                    for n in tiempo_2:\n",
+    "                        if m>n: # condiciones de borde\n",
+    "                            continue\n",
+    "                        elif (j == 6     and ( (k<3.5 or k>=15) or (l<3.5 or l>=15) ) ):  # condiciones de borde\n",
+    "                            continue\n",
+    "                        elif (j == 6.5   and ( (k<4 or k>=15)   or (l<4   or l>=15) ) ):  # condiciones de borde\n",
+    "                            continue\n",
+    "                        elif (j == 7.875 and ( (k<4 or k>=15)   or (l<4   or l>=15) ) ):  # condiciones de borde\n",
+    "                            continue\n",
+    "                        elif (j == 9.875 and ( (k<5 or k>=15)   or (l<5   or l>=15) ) ):  # condiciones de borde\n",
+    "                            continue \n",
+    "                        elif (j == 10.625and ( (k<5.5 or k>=15) or (l<5.5 or l>=15) ) ):  # condiciones de borde\n",
+    "                            continue\n",
+    "                        elif (j == 12.25 and ( (k<5.5 or k>=15) or (l<5.5 or l>=15) ) ):  # condiciones de borde\n",
+    "                            continue\n",
+    "                        else: # cumple con las condiciones minimas\n",
+    "                            print (\"FC: \" + str(i))\n",
+    "                            print (\"diametro: \"+ str(j) )\n",
+    "                            print (\"B: \" + str(k))\n",
+    "                            print (\"S: \"+ str(l))\n",
+    "                            print (\"tiempo_1: \"+ str(m))\n",
+    "                            print (\"tiempo_2: \"+ str(n))\n",
+    "                            "
    ]
   },
   {
