falta cond de borde para FC

--- a/grid_felipe.ipynb
+++ b/grid_felipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CATEGORICAL_COLS = ['Fase', 'Tipo de tronadura', 'Tipo Material', 'M', 'Dominio Estructural', 'Tipo Explosivo']\n",
+    "NUMERICAL_COLS = ['Banco', 'Diámetro', 'Fc', 'Cota', 'B', 'S', 'tiempo_1', 'tiempo_2']\n",
+    "TARGET_COLS = ['P10', 'P20', 'P30', 'P40', 'P50', 'P60', 'P70', 'P80', 'P90', 'P100']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_stage3 = pd.read_excel('data/Datos_Entregable3_Hackathon.xlsx', header=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +126,10 @@
     "    9.875 == 9 7/8 -> 5 - 15m\n",
     "    7.875 == 7 7/8 -> 4 - 15m\n",
     "    6.5 == 6 1/2 -> 4 - 15m\n",
-    "    6 == 6 -> 3.6 - 15 m\n",
+    "    6 == 6 -> 3.6 - 15 \n",
+    "    \n",
+    "    25*D_p<T<B/2 ou S/2\n",
+    "    \n",
     "\"\"\""
    ]
   },
@@ -119,6 +142,53 @@
     "\"\"\"\n",
     "Diámetro - BxS - Tiempo entre Pozos Filas ms - Fc - Tipo Explosivo\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rho_explosivo = {\n",
+    "\"A\": 0.77,\n",
+    "\"B\": 1.34,\n",
+    "\"C\": 1.32,\n",
+    "\"D\": 1.00,\n",
+    "\"E\": 1.32,\n",
+    "\"F\": 1.30,\n",
+    "\"G\": 1.00,\n",
+    "\"H\": 1.00,\n",
+    "\"I\": 1.20,\n",
+    "\"J\": 1.32,\n",
+    "\"K\": 1.32,\n",
+    "\"L\": 1.32\n",
+    "}\n",
+    "\n",
+    "rho_roca = {\n",
+    "\"L1\": 2.53,\n",
+    "\"L2\": 2.53,\n",
+    "\"L3\": 2.65,\n",
+    "\"L4\": 2.65,\n",
+    "\"L5\": 2.49,\n",
+    "\"L6\": 2.49,\n",
+    "\"L7\": 2.65,\n",
+    "\"L8\": 2.74\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#se debe convertir la pulgada a metros (dividir por 39.370)\n",
+    "def gr_explosivo(D_p,T,rho_explosivo):\n",
+    "    return (3.14 * (D_p/39.370)^2) / 4  *( 16 - T ) * rho_explosivo\n",
+    "\n",
+    "def ton_carga(B,S,rho_roca):\n",
+    "    return B*S*15* rho_roca"
    ]
   },
   {
@@ -164,38 +234,289 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tipo_explosivo=['A','B','C','D','E','F','G','H','I','J','K','L']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in FC:\n",
+    "for row in df_stage3:\n",
     "    for j in diametro:\n",
     "        for k in B:\n",
     "            for l in S:\n",
     "                for m in tiempo_1:\n",
     "                    for n in tiempo_2:\n",
-    "                        if m>n: # condiciones de borde\n",
-    "                            continue\n",
-    "                        elif (j == 6     and ( (k<3.5 or k>=15) or (l<3.5 or l>=15) ) ):  # condiciones de borde\n",
-    "                            continue\n",
-    "                        elif (j == 6.5   and ( (k<4 or k>=15)   or (l<4   or l>=15) ) ):  # condiciones de borde\n",
-    "                            continue\n",
-    "                        elif (j == 7.875 and ( (k<4 or k>=15)   or (l<4   or l>=15) ) ):  # condiciones de borde\n",
-    "                            continue\n",
-    "                        elif (j == 9.875 and ( (k<5 or k>=15)   or (l<5   or l>=15) ) ):  # condiciones de borde\n",
-    "                            continue \n",
-    "                        elif (j == 10.625and ( (k<5.5 or k>=15) or (l<5.5 or l>=15) ) ):  # condiciones de borde\n",
-    "                            continue\n",
-    "                        elif (j == 12.25 and ( (k<5.5 or k>=15) or (l<5.5 or l>=15) ) ):  # condiciones de borde\n",
-    "                            continue\n",
-    "                        else: # cumple con las condiciones minimas\n",
-    "                            print (\"FC: \" + str(i))\n",
-    "                            print (\"diametro: \"+ str(j) )\n",
-    "                            print (\"B: \" + str(k))\n",
-    "                            print (\"S: \"+ str(l))\n",
-    "                            print (\"tiempo_1: \"+ str(m))\n",
-    "                            print (\"tiempo_2: \"+ str(n))\n",
+    "                        for o in tipo_explosivo:\n",
+    "                            if m>n: # condiciones de borde para tiempo\n",
+    "                                continue\n",
+    "                            elif (j == 6     and ( (k<3.5 or k>=15) or (l<3.5 or l>=15) ) ):  # condiciones de borde para B y S\n",
+    "                                continue\n",
+    "                            elif (j == 6.5   and ( (k<4 or k>=15)   or (l<4   or l>=15) ) ):  # condiciones de borde para B y S\n",
+    "                                continue\n",
+    "                            elif (j == 7.875 and ( (k<4 or k>=15)   or (l<4   or l>=15) ) ):  # condiciones de borde para B y S\n",
+    "                                continue\n",
+    "                            elif (j == 9.875 and ( (k<5 or k>=15)   or (l<5   or l>=15) ) ):  # condiciones de borde para B y S\n",
+    "                                continue \n",
+    "                            elif (j == 10.625and ( (k<5.5 or k>=15) or (l<5.5 or l>=15) ) ):  # condiciones de borde para B y S\n",
+    "                                continue\n",
+    "                            elif (j == 12.25 and ( (k<5.5 or k>=15) or (l<5.5 or l>=15) ) ):  # condiciones de borde para B y S\n",
+    "                                continue\n",
+    "                            else: # cumple con las condiciones minimas de B y S y tiempo\n",
+    "                                if 25*j/39.370>T or T>k/2 or T>l/2: \n",
+    "                                    continue\n",
+    "                                else: #cumple con las condiciones del TACO\n",
+    "                                    if #TODO arreglar el FC\n",
+    "                                        print (\"diametro: \"+ str(j) )\n",
+    "                                        print (\"B: \" + str(k))\n",
+    "                                        print (\"S: \"+ str(l))\n",
+    "                                        print (\"tiempo_1: \"+ str(m))\n",
+    "                                        print (\"tiempo_2: \"+ str(n))\n",
+    "                                        print (\"Tipo explosivo: \" + str(o))\n",
     "                            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fase                       STAGE 4\n",
+      "Banco                         2795\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 1\n",
+      "M                               L4\n",
+      "Dominio Estructural          Norte\n",
+      "P10                        1.06299\n",
+      "P20                        1.41732\n",
+      "P30                        1.85039\n",
+      "P40                        2.40158\n",
+      "P50                        3.18898\n",
+      "P60                        3.97638\n",
+      "P70                        4.88189\n",
+      "P80                        6.02363\n",
+      "P90                        7.79528\n",
+      "P100                       14.5669\n",
+      "Este                         58999\n",
+      "Norte                        90277\n",
+      "Cota                          2795\n",
+      "Name: 0, dtype: object\n",
+      "Fase                       STAGE 3\n",
+      "Banco                         3815\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               LASTRE\n",
+      "M                               L8\n",
+      "Dominio Estructural          Norte\n",
+      "P10                        1.22047\n",
+      "P20                         1.5748\n",
+      "P30                        1.88976\n",
+      "P40                         2.2441\n",
+      "P50                        2.67717\n",
+      "P60                        3.22835\n",
+      "P70                        3.77953\n",
+      "P80                        4.33071\n",
+      "P90                        5.35433\n",
+      "P100                       10.5118\n",
+      "Este                         57590\n",
+      "Norte                        91135\n",
+      "Cota                          3815\n",
+      "Name: 1, dtype: object\n",
+      "Fase                       STAGE 3\n",
+      "Banco                         3815\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               LASTRE\n",
+      "M                               L8\n",
+      "Dominio Estructural          Norte\n",
+      "P10                       0.866142\n",
+      "P20                        1.22047\n",
+      "P30                        1.69291\n",
+      "P40                        2.20473\n",
+      "P50                         2.6378\n",
+      "P60                        3.22835\n",
+      "P70                        3.85827\n",
+      "P80                        4.88189\n",
+      "P90                        6.14174\n",
+      "P100                       7.40158\n",
+      "Este                         57574\n",
+      "Norte                        90924\n",
+      "Cota                          3815\n",
+      "Name: 2, dtype: object\n",
+      "Fase                       STAGE 4\n",
+      "Banco                         2810\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 1\n",
+      "M                               L4\n",
+      "Dominio Estructural          Norte\n",
+      "P10                       0.748032\n",
+      "P20                        1.06299\n",
+      "P30                        1.45669\n",
+      "P40                        1.92913\n",
+      "P50                        2.51969\n",
+      "P60                         3.4252\n",
+      "P70                        4.40945\n",
+      "P80                        5.55118\n",
+      "P90                        7.48032\n",
+      "P100                       14.0551\n",
+      "Este                         58909\n",
+      "Norte                        90144\n",
+      "Cota                          2810\n",
+      "Name: 3, dtype: object\n",
+      "Fase                       STAGE 6\n",
+      "Banco                         3455\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 1\n",
+      "M                               L3\n",
+      "Dominio Estructural          Norte\n",
+      "P10                       0.944882\n",
+      "P20                         1.5748\n",
+      "P30                        2.16536\n",
+      "P40                         2.6378\n",
+      "P50                        3.07087\n",
+      "P60                        3.70079\n",
+      "P70                        4.25197\n",
+      "P80                        4.88189\n",
+      "P90                        6.53544\n",
+      "P100                       10.7087\n",
+      "Este                       59988.4\n",
+      "Norte                      89184.2\n",
+      "Cota                          3455\n",
+      "Name: 4, dtype: object\n",
+      "Fase                       STAGE 2\n",
+      "Banco                         3380\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 2\n",
+      "M                               L2\n",
+      "Dominio Estructural          Norte\n",
+      "P10                        1.29921\n",
+      "P20                        2.00788\n",
+      "P30                        2.67717\n",
+      "P40                        3.14961\n",
+      "P50                        3.50394\n",
+      "P60                        3.89764\n",
+      "P70                        4.33071\n",
+      "P80                        4.88189\n",
+      "P90                        5.82677\n",
+      "P100                       11.8898\n",
+      "Este                       59576.9\n",
+      "Norte                      91770.3\n",
+      "Cota                          3380\n",
+      "Name: 5, dtype: object\n",
+      "Fase                       STAGE 2\n",
+      "Banco                         3380\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 1\n",
+      "M                               L7\n",
+      "Dominio Estructural          Norte\n",
+      "P10                       0.826772\n",
+      "P20                        1.25984\n",
+      "P30                         2.2441\n",
+      "P40                        2.95276\n",
+      "P50                        3.74016\n",
+      "P60                        4.44882\n",
+      "P70                         5.3937\n",
+      "P80                        6.37796\n",
+      "P90                        7.67717\n",
+      "P100                       10.9843\n",
+      "Este                         59012\n",
+      "Norte                        91300\n",
+      "Cota                          3380\n",
+      "Name: 6, dtype: object\n",
+      "Fase                       STAGE 6\n",
+      "Banco                         3455\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 1\n",
+      "M                               L3\n",
+      "Dominio Estructural          Norte\n",
+      "P10                       0.669292\n",
+      "P20                        1.06299\n",
+      "P30                        1.45669\n",
+      "P40                        1.85039\n",
+      "P50                        2.32284\n",
+      "P60                        2.95276\n",
+      "P70                        3.62205\n",
+      "P80                        4.44882\n",
+      "P90                         5.7874\n",
+      "P100                       9.33071\n",
+      "Este                         59894\n",
+      "Norte                        89420\n",
+      "Cota                          3455\n",
+      "Name: 7, dtype: object\n",
+      "Fase                       STAGE 6\n",
+      "Banco                         3455\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 1\n",
+      "M                               L1\n",
+      "Dominio Estructural          Norte\n",
+      "P10                       0.551181\n",
+      "P20                       0.708662\n",
+      "P30                       0.984252\n",
+      "P40                        1.37795\n",
+      "P50                        1.77165\n",
+      "P60                        2.16536\n",
+      "P70                        2.71654\n",
+      "P80                        3.46457\n",
+      "P90                        4.17323\n",
+      "P100                       7.12599\n",
+      "Este                         59885\n",
+      "Norte                      89100.8\n",
+      "Cota                          3455\n",
+      "Name: 8, dtype: object\n",
+      "Fase                       STAGE 2\n",
+      "Banco                         3365\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 2\n",
+      "M                               L2\n",
+      "Dominio Estructural          Norte\n",
+      "P10                       0.905512\n",
+      "P20                        1.22047\n",
+      "P30                        1.53543\n",
+      "P40                        1.88976\n",
+      "P50                        2.40158\n",
+      "P60                        3.14961\n",
+      "P70                        3.93701\n",
+      "P80                        4.84252\n",
+      "P90                        5.98426\n",
+      "P100                       10.8268\n",
+      "Este                         59363\n",
+      "Norte                        91402\n",
+      "Cota                          3365\n",
+      "Name: 9, dtype: object\n",
+      "Fase                       STAGE 6\n",
+      "Banco                         3455\n",
+      "Tipo de tronadura      TRONADURA 2\n",
+      "Tipo Material               ROCA 1\n",
+      "M                               L2\n",
+      "Dominio Estructural          Norte\n",
+      "P10                       0.708662\n",
+      "P20                        1.06299\n",
+      "P30                        1.33858\n",
+      "P40                        1.73228\n",
+      "P50                        2.36221\n",
+      "P60                        2.99213\n",
+      "P70                        3.62205\n",
+      "P80                        4.37008\n",
+      "P90                        5.59055\n",
+      "P100                       9.72441\n",
+      "Este                         60014\n",
+      "Norte                        89201\n",
+      "Cota                          3455\n",
+      "Name: 10, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index,row in df_stage3.iterrows():\n",
+    "    print (row)"
    ]
   },
   {
